apps/langflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: langflow
  namespace: langflow
spec:
  rules:
    - host: langflow.pasuko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: langflow
                port:
                  number: 7860
